--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "images-scraper": "^2.0.11",
     "morgan": "~1.9.0",
     "promise-loop": "^1.0.1",
+    "raw-body": "^2.3.2",
     "serve-favicon": "~2.4.5"
   }
 }
