--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "promise-loop": "^1.0.1",
     "raw-body": "^2.3.2",
     "serve-favicon": "~2.4.5",
+    "socket.io": "^1.4.5",
     "zip-dir": "^1.0.2"
   }
 }
