--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "form-data": "^2.3.2",
     "image-downloader": "^3.3.0",
     "images-scraper": "^2.0.11",
     "morgan": "~1.9.0",
