add login method , update ui style

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
+    "electron": "^2.0.0",
     "express": "~4.15.5",
     "form-data": "^2.3.2",
     "image-downloader": "^3.3.0",
     "images-scraper": "^2.0.11",
     "morgan": "~1.9.0",
     "node-mkdir": "^1.0.0",
+    "node-salesforce": "^0.8.0",
     "promise-loop": "^1.0.1",
     "raw-body": "^2.3.2",
     "serve-favicon": "~2.4.5",
