--- a/vue-masonry-plugin-demo-master/package.json
+++ b/vue-masonry-plugin-demo-master/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@quasar/extras": "^1.3.1",
     "axios": "^0.18.0",
     "vue": "^2.3.3",
     "vue-masonry": "^0.10.11",
