--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "electron": "^2.0.0",
-    "express": "~4.15.5",
+    "electron": "^13.1.8",
+    "express": "^4.17.1",
     "form-data": "^2.3.2",
-    "image-downloader": "^3.3.0",
-    "images-scraper": "^2.0.11",
+    "image-downloader": "^4.0.3",
+    "images-scraper": "^6.3.0",
     "morgan": "~1.9.0",
     "node-mkdir": "^1.0.0",
     "node-salesforce": "^0.8.0",
     "promise-loop": "^1.0.1",
     "raw-body": "^2.3.2",
     "serve-favicon": "~2.4.5",
-    "socket.io": "^1.4.5",
+    "socket.io": "^4.1.3",
     "vue-tiny-slider": "^0.1.32",
     "zip-dir": "^1.0.2"
   }
