--- a/vue-masonry-plugin-demo-master/package.json
+++ b/vue-masonry-plugin-demo-master/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.3.1",
-    "axios": "^0.18.0",
+    "axios": "^0.21.1",
     "vue": "^2.3.3",
+    "vue-image-slider": "^1.0.2",
     "vue-masonry": "^0.10.11",
     "vue-router": "^3.0.1",
+    "vue-tiny-slider": "^0.1.39",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -37,7 +39,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.14.1",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
