--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "socket.io": "^4.1.3",
     "vue-tiny-slider": "^0.1.32",
     "zip-dir": "^1.0.2"
+  },
+  "proxy": {
+    "/searchGoogle": {
+      "target": "http://localhost:5000/searchGoogle"
+    }
   }
 }
