--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "/searchGoogle": {
       "target": "http://localhost:5000/searchGoogle"
     }
+  },
+  "engines": {
+    "node": ">= 10.24.1",
+    "npm": ">= 6.14.12"
   }
 }
